best automatically generated

--- a/best_auto_features .ipynb
+++ b/best_auto_features .ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -142,7 +138,7 @@
     "#     return vects\n",
     "\n",
     "def vectorize(txt):\n",
-    "    count_vect = CountVectorizer(stop_words=stopwords.words('english'),max_features = 6,strip_accents ='ascii')\n",
+    "    count_vect = CountVectorizer(stop_words=stopwords.words('english'),max_features = 5,strip_accents ='ascii')\n",
     "    #print(count_vect.get_feature_names)\n",
     "    vects = count_vect.fit_transform(txt)\n",
     "    print(vects.shape) \n",
@@ -171,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(348, 6)\n",
-      "(86, 6)\n"
+      "(348, 5)\n",
+      "(86, 5)\n"
      ]
     }
    ],
@@ -185,10 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = SVC(C=1, cache_size=200, class_weight=None, coef0=1.0,\n",
@@ -199,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +205,7 @@
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,10 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "predictions = model.predict(test_x_vects)"
@@ -233,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7209302325581395"
+       "0.5697674418604651"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7069208917136116\n"
+      "0.46819814709775004\n"
      ]
     },
     {
@@ -283,9 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -298,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +302,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,10 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "predi = dt.predict(test_x_vects, test_y)"
@@ -336,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7906976744186046"
+       "0.5930232558139535"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,14 +344,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7986891740873902\n"
+      "0.6349593236221143\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Erik\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -374,9 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -389,10 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
@@ -404,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +412,7 @@
        "          learning_rate=1.9, n_estimators=30, random_state=None)"
       ]
      },
-     "execution_count": 660,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,10 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "predi = ada.predict(test_x_vects)"
@@ -442,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7790697674418605"
+       "0.5348837209302325"
       ]
      },
-     "execution_count": 662,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,10 +524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -547,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +549,7 @@
        "            oob_score=False, random_state=4, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 556,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,10 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "predi = forest.predict(test_x_vects)"
@@ -583,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8255813953488372"
+       "0.686046511627907"
       ]
      },
-     "execution_count": 558,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,10 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#max 82.55"
@@ -614,10 +598,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from sklearn.ensemble import RandomForestClassifier\n",
